--- a/static/src/css/testing_message.css
+++ b/static/src/css/testing_message.css
@@ -9,15 +9,12 @@
 	z-index: 5000;
 	margin: 0;
 	width: 100%;
-	padding: 0.5% 0 0.5% 45%;
+	padding: 1% 0 1% 45%;
 	background-color: #000;
-	border-top: 5px solid #df3f3f;
-	border-bottom: 5px solid #df3f3f;
+	border: 5px solid #df3f3f;
 	color: #fff;
-	font-weight: bold;
-	opacity: 0.7;
-}
-
-#testing_message:hover{
-	opacity: 0.3;
+	font-weight: 900;
+	opacity: 0.6;
+	pointer-events: none;
+	font-size: 1.2em;
 }
