--- a/views/testing_message.xml
+++ b/views/testing_message.xml
@@ -9,7 +9,7 @@
         
         <template id="web_webclient_bootstrap" name="testing_message webclient_bootstrap" inherit_id="web.webclient_bootstrap">
             <xpath expr="//nav[1]" position="before">
-				<p id="testing_message">TESTING ENVIRONMENT</p>
+				<p id="testing_message">A TESTING ENVIRONMENT - <span class='redText'>ALL CHANGES WILL BE DISCARDED</span></p>
             </xpath>
         </template>        
     </data>
