--- a/static/src/css/web_ui_alternative.css
+++ b/static/src/css/web_ui_alternative.css
@@ -3,11 +3,18 @@ html, body, .openerp{
 	font-family: "Ubuntu", "Open Sans", sans-serif;
 }
 
+/* SHEETS */
+.openerp .oe_form_sheet_width {
+    max-width: 1200px;
+    min-width: 600px;
+}
+
 /* NAVBAR */
 .navbar-inverse {
     background: #444;
     background: linear-gradient(to bottom, #000, #555);
 }
+
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
     background: none;
 }
