Modify sheet width

--- a/static/src/css/web_ui_alternative.css
+++ b/static/src/css/web_ui_alternative.css
@@ -9,6 +9,10 @@ html, body, .openerp{
     min-width: 600px;
 }
 
+.modal-lg{
+    width: 70%;
+}
+
 /* NAVBAR */
 .navbar-inverse {
     background: #444;
