--- a/web_ui_alternative/static/src/css/web_ui_alternative.css
+++ b/web_ui_alternative/static/src/css/web_ui_alternative.css
@@ -74,6 +74,10 @@ html, body, .openerp{
     max-width: 20%;
 }
 
+.openerp .oe_searchview .oe_searchview_facets .oe_searchview_facet .oe_facet_value {
+    word-break: normal;
+}
+
 /* BUTTONS */
 /* All buttons */
 .openerp button {
