--- a/web_testing_message/views/testing_message.xml
+++ b/web_testing_message/views/testing_message.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
-        <template id="assets_backend" name="testing_message assets" inherit_id="web.assets_backend">
-            <xpath expr="." position="inside">
-                <link rel="stylesheet" href="/web_testing_message/static/src/css/testing_message.css"/>
-            </xpath>
-        </template>  
-    
-        <template id="web_webclient_bootstrap" name="testing_message webclient_bootstrap" inherit_id="web.webclient_bootstrap">
-            <xpath expr="//nav[1]" position="before">
-				<p id="testing_message">A TESTING ENVIRONMENT - <span class='redText'>ALL CHANGES WILL BE DISCARDED</span></p>
-            </xpath>
-        </template>        
-    </data>
-</openerp>
+<odoo noupdate="0">
+    <template id="assets_backend" name="testing_message assets" inherit_id="web.assets_backend">
+        <xpath expr="." position="inside">
+            <link rel="stylesheet" href="/web_testing_message/static/src/css/testing_message.css"/>
+        </xpath>
+    </template>
+
+    <template id="webclient_bootstrap" name="testing_message webclient_bootstrap"
+              inherit_id="web.webclient_bootstrap">
+        <xpath expr="//div[@class='o_main']" position="after">
+            <p id="testing_message">A TESTING ENVIRONMENT -
+                <span class='redText'>ALL CHANGES WILL BE DISCARDED</span>
+            </p>
+        </xpath>
+    </template>
+</odoo>
