--- a/web_report_sfs/views/report_templates.xml
+++ b/web_report_sfs/views/report_templates.xml
@@ -14,7 +14,7 @@
                         <div name="report-title" class="row">
                             <strong><t t-raw="report_title or doc and doc._description or 'Report'" /></strong>
                         </div>
-                        <div name="report-name" t-if="'name' in doc.fields_get() and doc.name" class="row">
+                        <div name="report-name" t-if="doc and 'name' in doc.fields_get() and doc.name" class="row">
                             <span t-esc="doc.name" />
                         </div>
                         <div name="report-date" class="row">
