[ADD] Header logo max width 100%

--- a/web_report_sfs/views/report_templates.xml
+++ b/web_report_sfs/views/report_templates.xml
@@ -7,7 +7,11 @@
             <div class="header">
                 <div class="row">
                     <div class="col-6" name="header-left-col">
-                        <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" style="max-height: 90px;" t-att-alt="company.name + ' logo'"/>
+                        <img
+                            t-if="company.logo"
+                            t-att-src="image_data_uri(company.logo)"
+                            style="max-height: 90px; max-width: 100%;"
+                            t-att-alt="company.name + ' logo'"/>
                     </div>
 
                     <div class="col-3" name="header-center-col">
