[ADD] Switch to show confidental on header, defaults to show

--- a/web_report_sfs/views/report_templates.xml
+++ b/web_report_sfs/views/report_templates.xml
@@ -30,7 +30,9 @@
                         <div class="text-right" name="header-page-number-div">
                             <span class="page"/> (<span class="topage"/>)
                         </div>
-                        <div class="text-right" name="header-confidential-div">Confidential</div>
+                        <t t-if="not unconfidental">
+                            <div class="text-right" name="header-confidential-div">Confidential</div>
+                        </t>
                     </div>
                 </div>
                 <div class="row zero_min_height" name="header-breaker">
