--- a/web_report_sfs/views/report_templates.xml
+++ b/web_report_sfs/views/report_templates.xml
@@ -23,8 +23,7 @@
                         </div>
                         <div name="report-date" class="row">
                             <t t-if="header_time_value">
-                                <t t-esc="header_time_value">
-                                </t>
+                                <span t-esc="header_time_value"/>
                             </t>
                             <t t-elif="header_time_now">
                                 <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%d.%m.%Y')"/>
