--- a/web_report_sfs/views/report_templates.xml
+++ b/web_report_sfs/views/report_templates.xml
@@ -22,10 +22,10 @@
                             <span t-esc="doc.name" />
                         </div>
                         <div name="report-date" class="row">
-                            <t t-if="header_time_value">
+                            <t t-if="header_date_value">
                                 <span t-esc="header_time_value"/>
                             </t>
-                            <t t-elif="header_time_now">
+                            <t t-elif="header_date_now">
                                 <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%d.%m.%Y')"/>
                             </t>
                         </div>
