--- a/web_login_username/views/web_login.xml
+++ b/web_login_username/views/web_login.xml
@@ -4,5 +4,8 @@
         <xpath expr="//label[@for='login']" position="replace">
             <label for="login" class="control-label">Username</label>
         </xpath>
+        <xpath expr="//input[@name='login']" position="attributes">
+            <attribute name="placeholder">Username</attribute>
+        </xpath>
     </template>
 </odoo>
