--- a/report_element_sizes/static/src/less/custom.less
+++ b/report_element_sizes/static/src/less/custom.less
@@ -1,7 +1,11 @@
 #informations > .col-auto.mw-100.mb-2 {
 
-    display: inline-block;
+    //display: inline-block;
     min-width: 24%;
     vertical-align: text-top;
 
+}
+
+.mt16 {
+    padding-bottom: 20px;
 }
