--- a/web_tree_view_limit/views/ir_act_window.xml
+++ b/web_tree_view_limit/views/ir_act_window.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <odoo>
-    <record id="res_config_settings_view_form" model="ir.ui.view">
+    <record id="view_window_action_form" model="ir.ui.view">
         <field name="name">ir.actions.act_window.form.default.limit</field>
         <field name="model">ir.actions.act_window</field>
         <field name="inherit_id" ref="base.view_window_action_form"/>
