--- a/web_content_link_url/views/ir_attachment_views.xml
+++ b/web_content_link_url/views/ir_attachment_views.xml
@@ -1,12 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="view_attachment_form_link_url" model="ir.ui.view">
         <field name="name">view.attachment.form.link.url</field>
         <field name="model">ir.attachment</field>
-        <field name="inherit_id" ref="website.view_attachment_form_inherit_website"/>
+        <field name="inherit_id" ref="website.view_attachment_form_inherit_website" />
         <field name="arch" type="xml">
             <field name="website_id" position="after">
-                <field name="link_url" widget="url" attrs="{'invisible': [('link_url', '=', False)]}"/>
+                <field
+                    name="link_url"
+                    widget="url"
+                    attrs="{'invisible': [('link_url', '=', False)]}"
+                />
             </field>
         </field>
     </record>
