--- a/web_editor_always_display_code_view/views/assets.xml
+++ b/web_editor_always_display_code_view/views/assets.xml
@@ -1,9 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <data>
-        <template id="assets_backend" name="web_editor_always_display_code_view_assets" inherit_id="web.assets_backend">
+        <template
+            id="assets_backend"
+            name="web_editor_always_display_code_view_assets"
+            inherit_id="web.assets_backend"
+        >
             <xpath expr="." position="inside">
-                <script type="text/javascript" src="/web_editor_always_display_code_view/static/src/js/field_html.js"/>
+                <script
+                    type="text/javascript"
+                    src="/web_editor_always_display_code_view/static/src/js/field_html.js"
+                />
             </xpath>
         </template>
     </data>
