--- a/web_report_sfs/views/report_templates.xml
+++ b/web_report_sfs/views/report_templates.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
     <!-- SFS 2487 compliant header -->
@@ -11,32 +11,44 @@
                             t-if="company.logo"
                             t-att-src="image_data_uri(company.logo)"
                             style="max-height: 90px; max-width: 100%;"
-                            t-att-alt="company.name + ' logo'"/>
+                            t-att-alt="company.name + ' logo'"
+                        />
                     </div>
 
                     <div class="col-3" name="header-center-col">
                         <div name="report-title" class="row">
-                            <strong><t t-raw="report_title or doc and doc._description or ''" /></strong>
+                            <strong><t
+                                    t-raw="report_title or doc and doc._description or ''"
+                                /></strong>
                         </div>
-                        <div name="report-name" t-if="doc and 'name' in doc.fields_get() and doc.name" class="row">
+                        <div
+                            name="report-name"
+                            t-if="doc and 'name' in doc.fields_get() and doc.name"
+                            class="row"
+                        >
                             <span t-esc="doc.name" />
                         </div>
                         <div name="report-date" class="row">
                             <t t-if="header_date_value">
-                                <span t-esc="header_date_value"/>
+                                <span t-esc="header_date_value" />
                             </t>
                             <t t-elif="header_date_now">
-                                <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%d.%m.%Y')"/>
+                                <span
+                                    t-esc="context_timestamp(datetime.datetime.now()).strftime('%d.%m.%Y')"
+                                />
                             </t>
                         </div>
                     </div>
 
                     <div class="col-3" name="header-right-col">
                         <div class="text-right" name="header-page-number-div">
-                            <span class="page"/> (<span class="topage"/>)
+                            <span class="page" /> (<span class="topage" />)
                         </div>
                         <t t-if="confidental">
-                            <div class="text-right" name="header-confidential-div">Confidential</div>
+                            <div
+                                class="text-right"
+                                name="header-confidential-div"
+                            >Confidential</div>
                         </t>
                     </div>
                 </div>
@@ -54,28 +66,62 @@
     <template id="footer">
         <t t-name="Footer">
             <!-- There should be at least 3 empty rows before footer -->
-            <div class="footer" style="font-size: 12px; padding-top: 3em;" t-if="not hide_footer">
+            <div
+                class="footer"
+                style="font-size: 12px; padding-top: 3em;"
+                t-if="not hide_footer"
+            >
                 <div class="container row" style="border-top: 1px solid black;">
 
                     <div name="footer-left-col" class="col-4">
-                        <t name="company-name" t-if="company.name"><span t-field="company.name" /><br/></t>
-                        <t name="company-street" t-if="company.partner_id.street"><span t-field="company.partner_id.street" /><br/></t>
-                        <t name="company-street2" t-if="company.partner_id.street2"><span t-field="company.partner_id.street2" /><br/></t>
-                        <t name="company-zip-city" t-if="company.partner_id.zip or company.partner_id.city"><span t-field="company.partner_id.zip" /> <span t-field="company.partner_id.city" style="text-transform: uppercase;"/></t>
+                        <t name="company-name" t-if="company.name"><span
+                                t-field="company.name"
+                            /><br /></t>
+                        <t name="company-street" t-if="company.partner_id.street"><span
+                                t-field="company.partner_id.street"
+                            /><br /></t>
+                        <t
+                            name="company-street2"
+                            t-if="company.partner_id.street2"
+                        ><span t-field="company.partner_id.street2" /><br /></t>
+                        <t
+                            name="company-zip-city"
+                            t-if="company.partner_id.zip or company.partner_id.city"
+                        ><span t-field="company.partner_id.zip" /> <span
+                                t-field="company.partner_id.city"
+                                style="text-transform: uppercase;"
+                            /></t>
                     </div>
 
                     <div name="footer-center-col" class="col-4">
-                        <t name="company-phone" t-if="company.phone"><span>Phone:</span> <span t-field="company.phone" /><br/></t>
-                        <t name="company-email" t-if="company.email"><span>Email:</span> <span t-field="company.email" /><br/></t>
-                        <t name="company-website" t-if="company.website"><span>Website:</span> <span t-field="company.website" /><br/></t>
+                        <t name="company-phone" t-if="company.phone"><span
+                            >Phone:</span> <span t-field="company.phone" /><br /></t>
+                        <t name="company-email" t-if="company.email"><span
+                            >Email:</span> <span t-field="company.email" /><br /></t>
+                        <t name="company-website" t-if="company.website"><span
+                            >Website:</span> <span t-field="company.website" /><br
+                            /></t>
                     </div>
 
                     <div name="footer-right-col" class="col-4">
-                        <t name="company-registry" t-if="company.company_registry" class="row">
-                            <span >Business ID:</span> <span t-esc="company.company_registry" /><br/>
+                        <t
+                            name="company-registry"
+                            t-if="company.company_registry"
+                            class="row"
+                        >
+                            <span>Business ID:</span> <span
+                                t-esc="company.company_registry"
+                            /><br />
                         </t>
-                        <t name="company-vat" t-if="company.vat" class="row"><span >VAT</span> <span t-field="company.vat" /><br/></t>
-                        <t name="company-office" t-if="company.partner_id.city" class="row"><span>Registered office:</span> <span t-field="company.partner_id.city" /><br/></t>
+                        <t name="company-vat" t-if="company.vat" class="row"><span
+                            >VAT</span> <span t-field="company.vat" /><br /></t>
+                        <t
+                            name="company-office"
+                            t-if="company.partner_id.city"
+                            class="row"
+                        ><span>Registered office:</span> <span
+                                t-field="company.partner_id.city"
+                            /><br /></t>
                     </div>
                 </div>
             </div>
@@ -84,44 +130,71 @@
 
     <!-- Override header and footer for standard layout -->
     <template id="external_layout_standard" inherit_id="web.external_layout_standard">
-        <xpath expr="//div[@t-attf-class='header o_company_#{company.id}_layout']" position="replace">
+        <xpath
+            expr="//div[@t-attf-class='header o_company_#{company.id}_layout']"
+            position="replace"
+        >
             <t t-call="web_report_sfs.header" />
         </xpath>
 
-        <xpath expr="//div[@t-attf-class='footer o_standard_footer o_company_#{company.id}_layout']" position="replace">
+        <xpath
+            expr="//div[@t-attf-class='footer o_standard_footer o_company_#{company.id}_layout']"
+            position="replace"
+        >
             <t t-call="web_report_sfs.footer" />
         </xpath>
     </template>
 
     <!-- Override header and footer for clean layout -->
     <template id="external_layout_clean" inherit_id="web.external_layout_clean">
-        <xpath expr="//div[@t-attf-class='header o_company_#{company.id}_layout']" position="replace">
+        <xpath
+            expr="//div[@t-attf-class='header o_company_#{company.id}_layout']"
+            position="replace"
+        >
             <t t-call="web_report_sfs.header" />
         </xpath>
 
-        <xpath expr="//div[@t-attf-class='footer o_clean_footer o_company_#{company.id}_layout']" position="replace">
+        <xpath
+            expr="//div[@t-attf-class='footer o_clean_footer o_company_#{company.id}_layout']"
+            position="replace"
+        >
             <t t-call="web_report_sfs.footer" />
         </xpath>
     </template>
 
     <!-- Override header and footer for boxed layout -->
     <template id="external_layout_boxed" inherit_id="web.external_layout_boxed">
-        <xpath expr="//div[@t-attf-class='header o_company_#{company.id}_layout']" position="replace">
+        <xpath
+            expr="//div[@t-attf-class='header o_company_#{company.id}_layout']"
+            position="replace"
+        >
             <t t-call="web_report_sfs.header" />
         </xpath>
 
-        <xpath expr="//div[@t-attf-class='footer o_boxed_footer o_company_#{company.id}_layout']" position="replace">
+        <xpath
+            expr="//div[@t-attf-class='footer o_boxed_footer o_company_#{company.id}_layout']"
+            position="replace"
+        >
             <t t-call="web_report_sfs.footer" />
         </xpath>
     </template>
 
     <!-- Override header and footer for background layout -->
-    <template id="external_layout_background" inherit_id="web.external_layout_background">
-        <xpath expr="//div[@t-attf-class='o_company_#{company.id}_layout header']" position="replace">
+    <template
+        id="external_layout_background"
+        inherit_id="web.external_layout_background"
+    >
+        <xpath
+            expr="//div[@t-attf-class='o_company_#{company.id}_layout header']"
+            position="replace"
+        >
             <t t-call="web_report_sfs.header" />
         </xpath>
 
-        <xpath expr="//div[@t-attf-class='o_company_#{company.id}_layout footer o_background_footer']" position="replace">
+        <xpath
+            expr="//div[@t-attf-class='o_company_#{company.id}_layout footer o_background_footer']"
+            position="replace"
+        >
             <t t-call="web_report_sfs.footer" />
         </xpath>
     </template>
