[IMP] Less padding in report item list

--- a/web_report_layout_clean_custom/static/src/scss/layout_clean.scss
+++ b/web_report_layout_clean_custom/static/src/scss/layout_clean.scss
@@ -5,5 +5,10 @@
                 width: inherit !important;
             }
         }
+        tbody {
+            tr td {
+                padding: 0.3rem !important;
+            }
+        }
     }
 }
