--- a/web_report_sfs/views/report_templates.xml
+++ b/web_report_sfs/views/report_templates.xml
@@ -173,10 +173,7 @@
         </xpath>
     </template>
     <!-- Override header and footer for striped layout -->
-    <template
-        id="external_layout_striped"
-        inherit_id="web.external_layout_striped"
-    >
+    <template id="external_layout_striped" inherit_id="web.external_layout_striped">
         <xpath
             expr="//div[@t-attf-class='o_company_#{company.id}_layout header']"
             position="replace"
