--- a/web_report_sfs/views/report_templates.xml
+++ b/web_report_sfs/views/report_templates.xml
@@ -9,14 +9,14 @@
                         <img
                             t-if="company.logo"
                             t-att-src="image_data_uri(company.logo)"
-                            style="max-height: 90px; max-width: 100%;"
+                            style="max-height: 90px; max-width: 90%;"
                             t-att-alt="company.name or '' + ' logo'"
                         />
                     </div>
                     <div class="col-3" name="header-center-col">
                         <div name="report-title" class="row">
                             <strong><t
-                                    t-raw="report_title or doc and doc._description or ''"
+                                    t-out="report_title or doc and doc._description or ''"
                                 /></strong>
                         </div>
                         <div
