--- a/web_report_sfs/views/report_templates.xml
+++ b/web_report_sfs/views/report_templates.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
+<!-- oca-hooks:disable=xml-dangerous-qweb-replace-low-priority -->
 <odoo>
     <!-- SFS 2487 compliant header -->
     <template id="header">
