[IMP] web_form_view_show_all_smart_buttons module: Show buttons with xml also

--- a/web_form_view_show_all_smart_buttons/static/src/views/button_box.xml
+++ b/web_form_view_show_all_smart_buttons/static/src/views/button_box.xml
@@ -5,6 +5,19 @@
         t-inherit="web.Form.ButtonBox"
         t-inherit-mode="extension"
     >
+        <xpath expr="//t[@t-foreach='visibleButtons']" position="after">
+            <t
+                t-slot="{{ button_value }}"
+                t-foreach="additionalButtons"
+                t-as="button"
+                t-key="button_value"
+            />
+        </xpath>
+
+        <xpath expr="//t[@t-if='additionalButtons.length']" position="attributes">
+            <attribute name="t-if">1 == 0</attribute>
+        </xpath>
+
         <xpath
             expr='//div[@class="o-form-buttonbox position-relative d-flex w-md-auto"]'
             position="attributes"
