--- a/web_report_sfs_footer_size/views/res_config_settings.xml
+++ b/web_report_sfs_footer_size/views/res_config_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="res_config_settings_view_form" model="ir.ui.view">
-        <field name="name">res.config.base.view.form.web.address.size</field>
+        <field name="name">res.config.base.view.form.web.footer.size</field>
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="base_setup.res_config_settings_view_form" />
         <field name="arch" type="xml">
@@ -9,8 +9,8 @@
                 expr="//field[@name='external_report_layout_id']/../../.."
                 position="after"
             >
-                <setting id="web_address_size" help="Web address upper padding">
-                    <field name="web_address_size" />
+                <setting id="web_footer_size" help="Web footer upper padding">
+                    <field name="web_footer_size" />
                 </setting>
             </xpath>
         </field>
